--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 server.port=8595
+
+logging.level.org.springframework.data.r2dbc=DEBUG
+
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/catalizator
+spring.r2dbc.username=postgres
+spring.r2dbc.password=pgsql
+
+spring.flyway.url=jdbc:postgresql://localhost:5432/catalizator
+spring.flyway.user=postgres
+spring.flyway.password=pgsql
