--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,12 @@ server.port=8595
 logging.level.org.springframework.data.r2dbc=DEBUG
 
 spring.r2dbc.url=r2dbc:postgresql://localhost:5432/catalizator
-spring.r2dbc.username=postgres
-spring.r2dbc.password=pgsql
+spring.r2dbc.username=user
+spring.r2dbc.password=userpassword
 
 spring.flyway.url=jdbc:postgresql://localhost:5432/catalizator
-spring.flyway.user=postgres
-spring.flyway.password=pgsql
+spring.flyway.user=user
+spring.flyway.password=userpassword
+
+jwt.secret=KASdhwuhdaidj289174918301jd,sadji`<,dKAjsd)I~)
+jwt.expiration=86400
